# expenser

./: .gitignore  CODEOWNERS  Cargo.toml  diesel.toml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/.cargo/: config.toml
backend/migrations/2023-06-11-035727_create_users/: up.sql
backend/migrations/2023-06-11-035737_create_invoices/: up.sql
backend/migrations/2023-06-11-035737_create_reports/: up.sql
backend/migrations/2023-06-11-035800_create_invoice_proof/: down.sql  up.sql
backend/migrations/2023-06-11-035800_create_report_proof/: down.sql  up.sql
backend/migrations/2023-06-11-035840_create_invoice_permissions/: down.sql  up.sql
backend/migrations/2023-06-11-035840_create_report_access/: up.sql
backend/migrations/2023-06-11-035840_create_report_permissions/: down.sql  up.sql
backend/migrations/2023-06-11-140508_create_invoice_line_item/: up.sql
backend/migrations/2023-06-11-140508_create_report_line_item/: down.sql  up.sql
backend/spec/: schema.yaml
backend/src/lib/: database.rs  lib.rs  models.rs  schema.rs
backend/src/lib/model_implementations/: invoice.rs  invoice_line_item.rs  invoice_permissions.rs  invoice_proof.rs  report.rs  report_access.rs  report_line_item.rs  report_permissions.rs  report_proof.rs  user.rs
backend/src/server/: logger.rs  server.rs  state.rs
backend/src/server/handlers/: access.rs  info.rs  line_items.rs  proof.rs  reports.rs  types.rs  users.rs
frontend/: Cargo.toml  package.json
frontend/.cargo/: config.toml
frontend/src/: app.rs  main.rs
frontend/src/pages/: dashboard.rs  report.rs  signin.rs  user.rs
migrations/2023-06-11-035727_create_users/: down.sql  up.sql
migrations/2023-06-11-035737_create_invoices/: up.sql
src/: schema.rs
src/lib/: database.rs  models.rs  schema.rs
src/server/: logger.rs  server.rs  state.rs
