[package]
name = "invoice"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/server.rs"

[lib]
name = "invoice"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.71"
argon2 = "0.5.0"
axum = "0.6.18"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
chrono = "0.4.26"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
fern = { version = "0.6.2", features = ["chrono", "colored"] }
log = "0.4.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

# Optimization levels
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
