[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "app"
path = "src/app.rs"

[dependencies]
leptos = { version = "0.4.1", features = ["csr"] }
leptos_router = { version = "0.4.1", features = ["csr"] }
reqwest = "0.11.18"
serde = "1.0.164"
serde_json = "1.0.99"
